po: update po/pt_BR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/common-base.po
+++ b/po/pt_BR/common-base.po
@@ -32,7 +32,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-20 04:38+0000\n"
+"PO-Revision-Date: 2016-12-20 07:46+0000\n"
 "Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -9233,7 +9233,7 @@ msgstr "excluir lote manual próprio"
 
 #: CRM/Core/Permission.php
 msgid "Delete accounting batches created by user"
-msgstr ""
+msgstr "Excluir lotes de contabilidade criados pelo usuário"
 
 #: CRM/Core/Permission.php
 msgid "delete all manual batches"
@@ -9241,7 +9241,7 @@ msgstr "excluir todos os lotes manuais"
 
 #: CRM/Core/Permission.php
 msgid "Delete all accounting batches"
-msgstr ""
+msgstr "Excluir todos os lotes de contabilidade"
 
 #: CRM/Core/Permission.php
 msgid "export own manual batches"
@@ -9249,7 +9249,7 @@ msgstr "exportar lotes manuais próprios"
 
 #: CRM/Core/Permission.php
 msgid "Export accounting batches created by user"
-msgstr ""
+msgstr "Exportar lotes de contabilidade criados pelo usuário"
 
 #: CRM/Core/Permission.php
 msgid "export all manual batches"
@@ -9257,7 +9257,7 @@ msgstr "exportar todos os lotes manuais"
 
 #: CRM/Core/Permission.php
 msgid "Export all accounting batches"
-msgstr ""
+msgstr "Exportar todos os lotes de contabilidade"
 
 #: CRM/Core/Permission.php
 msgid "administer payment processors"
@@ -9265,7 +9265,7 @@ msgstr "administrar processadores de pagamento"
 
 #: CRM/Core/Permission.php
 msgid "Add, Update, or Disable Payment Processors"
-msgstr ""
+msgstr "Adicionar, Atualizar ou Desativar Processadores de Pagamento"
 
 #: CRM/Core/Permission.php
 msgid "edit message templates"
@@ -9277,7 +9277,7 @@ msgstr "ver minhas faturas"
 
 #: CRM/Core/Permission.php
 msgid "Allow users to view/ download their own invoices"
-msgstr ""
+msgstr "Permitir aos usuários ver/baixar suas próprias faturas"
 
 #: CRM/Core/Permission.php
 msgid "edit api keys"
@@ -9959,7 +9959,7 @@ msgstr "Em"
 
 #: CRM/Core/SelectValues.php
 msgid "Not In"
-msgstr ""
+msgstr "Não Em"
 
 #: CRM/Core/SelectValues.php
 msgid "Like"
@@ -10121,7 +10121,7 @@ msgstr "Caixa de Seleção"
 
 #: CRM/Custom/Form/Field.php
 msgid "Adv Multi-Select (obsolete)"
-msgstr ""
+msgstr "Multi-Seleção Avançada (obsoleto)"
 
 #: CRM/Custom/Form/Field.php
 msgid "TextArea"
@@ -11373,7 +11373,7 @@ msgstr "Conjunto de Preços Extende"
 
 #: CRM/Price/DAO/PriceSet.php
 msgid "Is Price Set Quick Config?"
-msgstr ""
+msgstr "O Conjunto de Preços é uma Configuração Rápida?"
 
 #: CRM/Price/DAO/PriceSet.php
 msgid "Price Set Is Reserved"
@@ -12651,7 +12651,7 @@ msgstr "ID do Contato não é válido"
 
 #: CRM/Utils/DeprecatedUtils.php
 msgid "Event templates are not meant to be registered."
-msgstr ""
+msgstr "Modelos de Eventos não são feitos para serem inscritos."
 
 #: CRM/Utils/File.php
 msgid "Unable to remove file %1"
@@ -13036,7 +13036,7 @@ msgstr "'Cancelar inscrição via página da web' - cria um link para que os des
 
 #: CRM/Utils/VersionCheck.php
 msgid "This version of CiviCRM requires a security update."
-msgstr ""
+msgstr "Esta versão do CiviCRM necessita de uma atualização de segurança."
 
 #: CRM/Utils/VersionCheck.php
 msgid "Read advisory"
@@ -13112,7 +13112,7 @@ msgstr "Adicionar arquivo:"
 
 #: ang/crmAttachment/attachments.html
 msgid "Alternatively, you may add new files using drag/drop."
-msgstr ""
+msgstr "Alternativamente, você pode adicionar arquivos usando arrastar e soltar."
 
 #: ang/crmAttachment.js
 msgid "Attachment failed"
@@ -13128,7 +13128,7 @@ msgstr "Excluindo..."
 
 #: ang/crmUi/wizard.html
 msgid "Complete all required fields first"
-msgstr ""
+msgstr "Complete todos os campos requeridos primeiro"
 
 #: ang/crmUi/wizard.html
 msgid "Next step"
@@ -16217,7 +16217,7 @@ msgstr "O corpo do SMS excede o limite de 160 caracteres."
 msgid ""
 "This smart group will stay up-to-date with all contacts who meet the search "
 "criteria."
-msgstr ""
+msgstr "Este grupo inteligente estará atualizado com todos os contatos que se enquadrem no critério de busca."
 
 #: templates/CRM/Contact/Form/Task/SaveSearch.tpl
 msgid ""
@@ -19031,13 +19031,13 @@ msgstr "Você está usando um processador de pagamento que suporte auto-renovaç
 msgid ""
 "All membership types in the price set have the auto-renew feature enabled "
 "(Administer > CiviMember > Membership Types)"
-msgstr ""
+msgstr "Todas os tipos de filiação no conjunto de preço tem a auto-renovação habilitada (Administração > CiviMember > Tipo de Filiação)"
 
 #: templates/CRM/Price/Page/Field.hlp
 msgid ""
 "All membership types in the price set have the same duration (e.g. they are "
 "one year memberships)."
-msgstr ""
+msgstr "Todas os tipos de filiação no conjunto de preço tem a mesma duração (e.x.: são filiações de um ano)."
 
 #: templates/CRM/Price/Page/Field.hlp
 msgid ""
@@ -23250,7 +23250,7 @@ msgstr "Páginas de Campanha Pessoais - Boas Vindas para o Colaborador"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Personal Campaign Pages - Owner Notification"
-msgstr ""
+msgstr "Páginas de Campanha Pessoais - Notificação do Proprietário"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Additional Payment Receipt or Refund Notification"
@@ -24370,7 +24370,7 @@ msgstr "Determinar padrão para configuração de campos de nome individuais"
 msgid ""
 "Upgrade DB to 4.5.9: Fix saved searches consisting of multi-choice custom "
 "field(s)"
-msgstr ""
+msgstr "Atualizar BD para 4.5.9: corrige buscas salvas que consistam de campos personalizados de múltipla-escolha"
 
 #: CRM/Upgrade/Incremental/php/FourFour.php
 msgid ""
@@ -24495,11 +24495,11 @@ msgstr ""
 
 #: CRM/Upgrade/Incremental/php/FourSix.php
 msgid "Add and update reference_date column for Schedule Reminders"
-msgstr ""
+msgstr "Adiciona e atualiza a coluna reference_date para Lembretes Agendados"
 
 #: CRM/Upgrade/Incremental/php/FourSix.php
 msgid "Cleanup case type id data in log table."
-msgstr ""
+msgstr "Limpa ID do tipo de processo de tabela de registros."
 
 #: CRM/Upgrade/Incremental/php/FourThree.php
 msgid ""
@@ -24735,7 +24735,7 @@ msgstr "Atualizar CiviCRM da v %1 Para v %2"
 
 #: CRM/Upgrade/Page/Upgrade.php
 msgid "Congratulations! Your upgrade was successful!"
-msgstr ""
+msgstr "Parabéns! Sua atualização foi um sucesso!"
 
 #: CRM/Upgrade/Page/Upgrade.php
 msgid "Upgrade failed to redirect"
@@ -24792,7 +24792,7 @@ msgstr "Atualizar múltiplas atividades"
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple activities."
-msgstr ""
+msgstr "Tipo(s) de campo Arquivo e Selecionar-AutoCompletar no perfil selecionado não são suportados para Atualização de múltiplas atividades."
 
 #: CRM/Activity/Form/Task/PickOption.php
 msgid ""
@@ -24869,19 +24869,19 @@ msgstr ""
 
 #: CRM/Contact/BAO/GroupContactCache.php
 msgid "Opportunistic Flush"
-msgstr ""
+msgstr "Limpeza Oportunista"
 
 #: CRM/Contact/BAO/GroupContactCache.php
 msgid "Cron Flush"
-msgstr ""
+msgstr "Limpeza via Cron"
 
 #: CRM/Contact/BAO/GroupNestingCache.php
 msgid "We detected a cycle which we can't handle. aborting"
-msgstr ""
+msgstr "Detectamos um ciclo com o qual não podemos lidar. abortando"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Tagged %1 %2"
-msgstr ""
+msgstr "Etiquetado %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "State/Province %1 %2 %3"
@@ -25474,7 +25474,7 @@ msgstr "Nome da Zona de Temp"
 
 #: CRM/Core/DAO/Timezone.php
 msgid "Timezone Abbreviation"
-msgstr ""
+msgstr "Abreviação de Zona de Tempo"
 
 #: CRM/Core/DAO/Timezone.php
 msgid "GMT Name of Timezone"
@@ -26142,7 +26142,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "</tbody></table></p>"
-msgstr ""
+msgstr "</tbody></table></p>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "Option Values with problematic Values"
@@ -26493,7 +26493,7 @@ msgstr ""
 msgid ""
 "This report can not be displayed because there are no relevant entries in "
 "the logging tables."
-msgstr ""
+msgstr "Este relatório não pode ser exibido porque não há entradas relevantes nas tabelas de registro."
 
 #: templates/CRM/Price/Page/Option.tpl
 msgid "Maximum"
@@ -26953,15 +26953,15 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Used in search forms and for relationships."
-msgstr ""
+msgstr "Usado em formulários de busca e para relacionamentos."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending (pay later)"
-msgstr ""
+msgstr "Pendente (pagar depois)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending (incomplete transaction)"
-msgstr ""
+msgstr "Pendente (transação incompleta)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Transferred"
@@ -27016,13 +27016,13 @@ msgid ""
 "Your configured editor \"TinyMCE\" is no longer part of the main CiviCRM "
 "download. To continue using it, visit the <a %1>Manage Extensions</a> page "
 "to download and install the TinyMCE extension."
-msgstr ""
+msgstr "Seu editor configurado \"TinyMCE\" não é mais parte da instalação principal do CiviCRM. Para continuar a usá-lo, visite a página <a %1>Gerenciar Extensões</a> para fazer o download e instalação da extensão TinyMCE."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid ""
 "CiviCRM no longer integrates with the \"%1 Default Editor.\" Your wysiwyg "
 "setting has been reset to the built-in CKEditor. <a %2>Learn more...</a>"
-msgstr ""
+msgstr "O CiviCRM não se integra mais com o \"Editor Padrão %1\". Sua configuração foi refeita para o editor incluso CKEditor.  <a %2>Leia mais...</a>"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid ""
@@ -27061,12 +27061,12 @@ msgstr ""
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Alter index and type for image URL"
-msgstr ""
+msgstr "Index alternativo e tipo da URL de imagem"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Fill in setting \"remote_profile_submissions\""
-msgstr ""
+msgstr "Preencha em configurações \"remote_profile_submissions\""
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Add Data Type column to civicrm_option_group"
-msgstr ""
+msgstr "Adicionar coluna Tipo de Dados para civicrm_option_group"
