--- a/po/de_DE/mailing.po
+++ b/po/de_DE/mailing.po
@@ -18,6 +18,7 @@
 # Moira Brülisauer <moosline@savvy.ch>, 2016
 # tosca <peter.wenzel@wienertafel.at>, 2016
 # Martin Peth <peth@systopia.de>, 2012
+# Philipp Michael <pminf@posteo.de>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Ronny Weise <inactive+civi_uebersetzer@transifex.com>, 2013
 # Saskia H Herrmann <saskia@undeveloped.com>, 2015
@@ -30,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-21 13:50+0000\n"
+"Last-Translator: Philipp Michael <pminf@posteo.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -255,7 +256,7 @@ msgstr "Antwort-an E-Mail"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Body Html"
-msgstr ""
+msgstr "Inhalt-HTML"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Url Tracking"
@@ -649,11 +650,11 @@ msgstr "Abmelde-Gruppe"
 
 #: CRM/Mailing/Form/Group.php
 msgid "INCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "Die Empfänger dieser Rundschreiben miteinbeziehen"
 
 #: CRM/Mailing/Form/Group.php
 msgid "EXCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "Die Empfänger dieser Rundschreiben ausschließen"
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Settings.php
 #: CRM/Mailing/Form/Test.php CRM/Mailing/Form/Upload.php
@@ -1176,7 +1177,7 @@ msgstr "CiviCRM Rundschreiben Suche "
 
 #: ang/crmMailing/BlockApprove.html
 msgid "Unreviewed"
-msgstr ""
+msgstr "Ungelesen"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Save As"
@@ -1188,19 +1189,19 @@ msgstr "E-Mail Adresse"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
-msgstr ""
+msgstr "Gruppe abbestellen"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "No content to preview"
-msgstr ""
+msgstr "Kein Inhalt anzuzeigen"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
-msgstr ""
+msgstr "Ansicht in HTML"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as Plain Text"
-msgstr ""
+msgstr "Ansicht als Nur-Text-Format"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
@@ -1220,11 +1221,11 @@ msgstr "Test senden"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr ""
+msgstr "Test-E-Mail an Gruppe senden:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
-msgstr ""
+msgstr "Testnachricht an Gruppe senden:"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
@@ -1232,11 +1233,11 @@ msgstr "Senden an %1"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "A test message will be sent to %1 people:"
-msgstr ""
+msgstr "Eine Testnachricht wird an %1 Person(en) gesendet:"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "None of the contacts in this group have an email address."
-msgstr ""
+msgstr "Keiner der Kontakte in dieser Gruppe hat eine E-Mail-Adresse."
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Group is empty."
@@ -1244,20 +1245,20 @@ msgstr "Gruppe ist leer."
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Preview a List of Recipients"
-msgstr ""
+msgstr "Zeige eine Liste der Empfänger"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Edit Recipient Options"
-msgstr ""
+msgstr "Bearbeite Empfänger-Optionen"
 
 #: ang/crmMailing/BlockResponses.html ang/crmMailing/BlockReview.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/EditCtrl/report.html
 msgid "Track Replies"
-msgstr ""
+msgstr "Antworten nachverfolgen"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond to Replies"
-msgstr ""
+msgstr "Auf Antworten automatisch antworten"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond Message"
@@ -1296,7 +1297,7 @@ msgstr "Reaktionen"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Auto-Respond"
-msgstr ""
+msgstr "Automatische Antwort"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 #: templates/CRM/Mailing/Page/Resubscribe.tpl
@@ -1310,19 +1311,19 @@ msgstr "Erneut abonnieren"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Publication"
-msgstr ""
+msgstr "Veröffentlichung"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send immediately"
-msgstr ""
+msgstr "Sofort versenden"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send at:"
-msgstr ""
+msgstr "Sende am:"
 
 #: ang/crmMailing/BlockSummary.html ang/crmMailingAB/BlockSetup.html
 msgid "Select Campaign"
-msgstr ""
+msgstr "Wähle Kampagne"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click Throughs"
@@ -1342,11 +1343,11 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "This mailing has been submitted."
-msgstr ""
+msgstr "Das Rundschreiben wurde übermittelt."
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
-msgstr ""
+msgstr "Rundschreiben gestalten"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1355,7 +1356,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Header and Footer"
-msgstr ""
+msgstr "Kopf- und Fußbereich"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1368,7 +1369,7 @@ msgstr ""
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Review and Schedule"
-msgstr ""
+msgstr "Prüfen und Versand planen"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/wizard.html
@@ -1383,7 +1384,7 @@ msgstr "Prüfen"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Delete Draft"
-msgstr ""
+msgstr "Entwurf löschen"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1392,7 +1393,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Are you sure you want to permanently delete this mailing?"
-msgstr ""
+msgstr "Sind Sie sicher, dass Sie dieses Rundschreiben unwiderruflich löschen wollen?"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1401,7 +1402,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Save Draft"
-msgstr ""
+msgstr "Entwurf speichern"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Submit and Approve Mailing"
@@ -1410,7 +1411,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl.js ang/crmMailingAB/EditCtrl.js
 #: ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Submitting..."
-msgstr ""
+msgstr "Übermittlung..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "(Estimating)"
@@ -1418,15 +1419,15 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/PreviewRecipCtrl.html
 msgid "No recipients"
-msgstr ""
+msgstr "Keine Empfänger"
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "~1 recipient"
-msgstr ""
+msgstr "~1 Empfänger"
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "~%1 recipients"
-msgstr ""
+msgstr "~%1 Empfänger"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/services.js
 msgid "Previewing..."
@@ -1438,15 +1439,15 @@ msgstr "Vorschau (%1)"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Dedupe by email"
-msgstr ""
+msgstr "Duplikate entfernen (nach E-Mail) "
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Selection Method"
-msgstr ""
+msgstr "Auswahlmethode"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid "Conflict"
-msgstr ""
+msgstr "Konflikt"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid ""
@@ -1482,11 +1483,11 @@ msgstr ""
 
 #: ang/crmMailing/EmailBodyCtrl.js
 msgid "Required tokens"
-msgstr ""
+msgstr "Erforderliche Platzhalter"
 
 #: ang/crmMailing/MsgTemplateCtrl.js
 msgid "Save Template"
-msgstr ""
+msgstr "Vorlage speichern"
 
 #: ang/crmMailing/PreviewComponentCtrl.js
 msgid "Invalid component ID (%1)"
@@ -1568,7 +1569,7 @@ msgstr ""
 
 #: ang/crmMailing/services.js
 msgid "Opt-Outs"
-msgstr ""
+msgstr "Opt-Outs"
 
 #: ang/crmMailing.js ang/crmMailingAB.js
 msgid "Initializing..."
@@ -2608,7 +2609,7 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Trackable Url"
-msgstr ""
+msgstr "Verfolgbare URL"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Please provide either HTML or TEXT format for the Body."
@@ -2650,4 +2651,4 @@ msgstr ""
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Public url"
-msgstr ""
+msgstr "Öffentliche URL"
