--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-16 00:11+0000\n"
+"PO-Revision-Date: 2016-12-21 10:42+0000\n"
 "Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -274,7 +274,7 @@ msgid ""
 "XCache is installed and there are known compatibility issues between XCache "
 "and CiviCRM. Consider using an alternative PHP caching mechanism or disable "
 "PHP caching altogether."
-msgstr "XCache est installé et il existe des problèmes de compatibilité connus entre XCache et CiviCRM. Pensez à utiliser un autre mécanisme de cache PHP ou désactivez la mise en cache PHP."
+msgstr "XCache est installé mais il existe des problèmes de compatibilité connus entre XCache et CiviCRM. Pensez à utiliser un autre mécanisme de cache PHP ou désactivez la mise en cache PHP."
 
 #: install/index.php
 msgid "Memory allocated (PHP config option 'memory_limit')"
