--- a/po/fr_FR/case.po
+++ b/po/fr_FR/case.po
@@ -11,6 +11,7 @@
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # F Boot <f2boot@gmail.com>, 2012
+# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
 # Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -28,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 21:48+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-21 10:00+0000\n"
+"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -294,7 +295,7 @@ msgid ""
 "The selected activity has been moved to the Trash. You can view and / or "
 "restore deleted activities by checking \"Deleted Activities\" from the Case "
 "Activities search filter (under Manage Case).<br />"
-msgstr "L'activité sélectionnée a été supprimée. Vous pouvez la restaurer en utilisant le filtre de recherche des activités (dans gérer les cas)."
+msgstr "L'activité sélectionnée a été supprimée. Vous pouvez la voir ou la restaurer en utilisant le filtre de recherche des activités supprimées (dans gérer les cas)."
 
 #: CRM/Case/Form/Activity.php
 msgid "Selected Activity cannot be deleted."
