po: update po/fr_FR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -46,7 +46,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-15 23:17+0000\n"
+"PO-Revision-Date: 2016-12-21 10:45+0000\n"
 "Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -13582,7 +13582,7 @@ msgid ""
 "field groups and profiles respectively. Do not enable those Drupal "
 "permissions for a Drupal role if you want to use CiviCRM ACL's to control "
 "access."
-msgstr "IMPORTANT : la permission Drupal pour « accéder à toutes les données personnalisées » et « Listes et formulaires profils » désactive les configurations ACL spécifiques respectives pour les groupes de champs personnalisés et profils. N'activez pas ces permissions Drupal pour un rôle Drupal si vous voulez utiliser les ACL de CiviCRM pour contrôler les accès."
+msgstr "IMPORTANT : La permission Drupal pour « accéder à toutes les données personnalisées » et « Listes et formulaires profils » désactive les configurations ACL spécifiques respectives pour les groupes de champs personnalisés et profils. N'activez pas ces permissions Drupal pour un rôle Drupal si vous voulez utiliser les ACL de CiviCRM pour contrôler les accès."
 
 #: templates/CRM/ACL/Form/ACL.tpl
 msgid ""
@@ -16154,7 +16154,7 @@ msgid ""
 "By default, CiviCRM uses the provider which are set active and the default "
 "provider is selected. User with administer CiviCRM permission can add a new "
 "Provider"
-msgstr "Par défaut CiviCRM utilise la passerelle qui est active et cette passerelle est sélectionnée par défaut. Les utilisateurs disposant du droit d'administrer CiviCRM peuvent ajouter une nouvelle passerelle."
+msgstr "Par défaut CiviCRM utilise la passerelle qui est active et  sélectionnée par défaut. Les utilisateurs disposant du droit d'administrer CiviCRM peuvent ajouter une nouvelle passerelle."
 
 #: templates/CRM/Contact/Form/Task/SMS.hlp
 msgid ""
@@ -16955,7 +16955,7 @@ msgstr "Configurez jusqu'à 5 champs pour rechercher les contacts en double. Pou
 msgid ""
 "You can also set a <strong>Length</strong> value which determines how many "
 "characters in the field should be compared."
-msgstr "Vous pouvez aussi paramétrer une <strong>Longueur</strong> qui déterminera combien de caractères dans le champ doivent être comparés."
+msgstr "Vous pouvez aussi paramétrer une <strong>Longueur</strong> qui déterminera combien de caractères doivent être comparés dans le champ."
 
 #: templates/CRM/Contact/Page/DedupeRules.hlp
 msgid ""
@@ -19471,7 +19471,7 @@ msgstr "as de paramètres"
 
 #: templates/CRM/SMS/Page/Provider.tpl
 msgid "Add SMS Provider"
-msgstr "Ajouter fournisseur SMS"
+msgstr "Ajouter un fournisseur SMS"
 
 #: templates/CRM/SMS/Page/Provider.tpl
 msgid "(How to add a SMS Provider)"
@@ -25943,7 +25943,7 @@ msgstr "Répertoire non accessible en écriture"
 msgid ""
 "The check for new versions of CiviCRM has been disabled. <a %1>Re-enable the"
 " scheduled job</a> to receive important security update notifications."
-msgstr ""
+msgstr "Le contrôle des nouvelles versions de CiviCRM a été désactivé. <a %1> Réactivez les travaux planifiés </a> pour recevoir des notifications de mise à jour de sécurité importantes."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Update Check Disabled"
@@ -26990,7 +26990,7 @@ msgid ""
 "Checks for CiviCRM version updates. Important for keeping the database "
 "secure. Also sends anonymous usage statistics to civicrm.org to to assist in"
 " prioritizing ongoing development efforts."
-msgstr ""
+msgstr "Vérifie les mises à jour de la version CiviCRM. Important pour maintenir la base de données sécurisée. Envoie également des statistiques d'utilisation anonymes à civicrm.org pour aider à prioriser les efforts de développement en cours."
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Events - Registration Transferred Notice"
@@ -27063,7 +27063,7 @@ msgid ""
 "By default, CiviCRM now disables the ability to import directly from SQL. To"
 " use this feature, you must explicitly grant permission 'import SQL "
 "datasource'."
-msgstr ""
+msgstr "Par défaut, CiviCRM désactive la possibilité d'importer directement à partir de SQL. Pour utiliser cette fonctionnalité, vous devez explicitement accorder l'autorisation «importer une source de données SQL»."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Migrate Settings to %1"
