po: update po/sr_RS@latin/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/pcp.po
+++ b/po/sr_RS@latin/pcp.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-19 12:19+0000\n"
+"PO-Revision-Date: 2016-12-23 13:59+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -19,35 +19,35 @@ msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Are you sure you want to delete this Personal Campaign Page?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete ovu stranicu lične kampanje?"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Create a Personal Campaign Page"
-msgstr ""
+msgstr "Kreiraj stranicu lične kampanje"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Edit Your Page"
-msgstr ""
+msgstr "Uredite svoju stranicu"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Tell Friends"
-msgstr ""
+msgstr "Recite prijateljima"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "URL for this Page"
-msgstr ""
+msgstr "URL ove stranice"
 
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
-msgstr ""
+msgstr "Ažuriraj kontakt informacije"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Enable Personal Campaign Pages?"
-msgstr ""
+msgstr "Uključi stranicu lične kampanje"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Approval required"
-msgstr ""
+msgstr "Potrebno odobrenje"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Owner Email Notification"
@@ -55,7 +55,7 @@ msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
-msgstr ""
+msgstr "Dozvoli funkcionalnost za \"Reci prijatelju\""
 
 #: CRM/PCP/BAO/PCP.php
 msgid "'Tell a friend' maximum recipients limit"
@@ -63,11 +63,11 @@ msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Please enter a valid limit."
-msgstr ""
+msgstr "Molimo unesite važeći limit."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "'Create Personal Campaign Page' link text"
-msgstr ""
+msgstr "Link tekst za 'Kreiraj stranicu lične kampanje'"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
@@ -163,28 +163,28 @@ msgstr ""
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
-msgstr ""
+msgstr "ID stranice lične kampanje"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page Status"
-msgstr ""
+msgstr "Status stranice lične kampanje"
 
 #: CRM/PCP/DAO/PCP.php xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
 msgid "Personal Campaign Page Title"
-msgstr ""
+msgstr "Naslov stranice lične kampanje"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Intro Text"
-msgstr ""
+msgstr "Uvodni tekst"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Page Text"
-msgstr ""
+msgstr "Tekst na stranici"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Donate Link Text"
-msgstr ""
+msgstr "Tekst za Donirajte link"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "PCP Page Type"
@@ -204,7 +204,7 @@ msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php templates/CRM/PCP/Form/Event.hlp
 msgid "Link Text"
-msgstr ""
+msgstr "Tekst za link"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Setup a Personal Campaign Page - Step 2"
@@ -212,7 +212,7 @@ msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
-msgstr ""
+msgstr "Uredi stranicu lične kampanje"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Welcome"
@@ -224,7 +224,7 @@ msgstr "Vaš cilj"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value"
-msgstr ""
+msgstr "Ciljani iznos mora biti numerička vrednost"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Join Us"
@@ -260,7 +260,7 @@ msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
-msgstr ""
+msgstr "Tekst za dugme mora imati manje od 64 karaktera."
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -292,15 +292,15 @@ msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Personal Campaign Page has been %1 %2 %3"
-msgstr ""
+msgstr "Vaša stranica lične kampanje je %1 %2 %3"
 
 #: CRM/PCP/Form/Contribute.php
 msgid "Create your own fundraising page"
-msgstr ""
+msgstr "Kreirajte sopstvenu stranicu za prikupljanje sredstava"
 
 #: CRM/PCP/Form/Contribute.php
 msgid "Enable Personal Campaign Pages? (for this contribution page)"
-msgstr ""
+msgstr "Uključi stranice lične kampanje? (za ovu stranicu za doniranje)"
 
 #: CRM/PCP/Form/Contribute.php
 msgid ""
@@ -318,19 +318,19 @@ msgstr ""
 
 #: CRM/PCP/Form/Contribute.php CRM/PCP/Form/Event.php
 msgid "Enable Personal Campaign Pages"
-msgstr ""
+msgstr "Uključi stranice lične kampanje"
 
 #: CRM/PCP/Form/Event.php
 msgid "Personal Campaign Page Settings (%1)"
-msgstr ""
+msgstr "Podešavanja stranice lične kampanje (%1)"
 
 #: CRM/PCP/Form/Event.php
 msgid "Promote this event with a personal campaign page"
-msgstr ""
+msgstr "Promovišite ovaj događaj sa stranicom lične kampanje"
 
 #: CRM/PCP/Form/Event.php
 msgid "Enable Personal Campaign Pages? (for this event)"
-msgstr ""
+msgstr "Uključi stranice lične kampanje? (za ovaj događaj)"
 
 #: CRM/PCP/Form/Event.php
 msgid ""
@@ -340,7 +340,7 @@ msgstr ""
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been deleted."
-msgstr ""
+msgstr "Stranica kampanje '%1' je obrisana."
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Deleted"
@@ -364,7 +364,7 @@ msgstr "Stranica uključena"
 
 #: CRM/PCP/Form/PCP.php
 msgid "Source Type"
-msgstr ""
+msgstr "Tip izvora"
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
@@ -385,7 +385,7 @@ msgstr ""
 
 #: CRM/PCP/Page/PCP.php
 msgid "Are you sure you want to delete this Campaign Page ?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete stranicu ove kampanje?"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Edit Personal Campaign Page"
@@ -433,15 +433,15 @@ msgstr ""
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Change the content and appearance of your page"
-msgstr ""
+msgstr "Izmenite sadržaj i izgled vaše stranice"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Send emails inviting your friends to support your campaign!"
-msgstr ""
+msgstr "Pošaljite emailove i pozovite prijatelje da podrže vašu kampanju!"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Copy this link to share directly with your network!"
-msgstr ""
+msgstr "Kopirajte ovaj link i podelite ga!"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
@@ -635,7 +635,7 @@ msgstr "Naslov stranice"
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "Contribution Page / Event"
-msgstr ""
+msgstr "Stranica za donacije / Događaj"
 
 #: templates/CRM/PCP/Page/PCP.tpl
 msgid "View page"
@@ -700,15 +700,15 @@ msgstr ""
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "Stop"
-msgstr ""
+msgstr "Stop"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "Start scrolling"
-msgstr ""
+msgstr "Počni skrolovanje"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "Stop scrolling"
-msgstr ""
+msgstr "Zaustavi skrolovanje"
 
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_subject.tpl
@@ -719,12 +719,12 @@ msgstr ""
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
 msgid "Updated personal campaign page"
-msgstr ""
+msgstr "Ažurirana stranica lične kampanje"
 
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
 msgid "New personal campaign page"
-msgstr ""
+msgstr "Nova stranica lične kampanje"
 
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
@@ -734,12 +734,12 @@ msgstr "Pregled stranice"
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
 msgid "Linked to Contribution Page"
-msgstr ""
+msgstr "Link ka stranici za doniranje"
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "You have received a donation at your personal page"
-msgstr ""
+msgstr "Primili ste donaciju na ličnoj stranici"
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
@@ -762,7 +762,7 @@ msgstr ""
 
 #: xml/templates/message_templates/pcp_owner_notify_subject.tpl
 msgid "Someone has just donated to your personal campaign page"
-msgstr ""
+msgstr "Neko je upravo donirao na vašoj stranici lične kampanje"
 
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "Personal Campaign Page Owner Notification"
@@ -908,7 +908,7 @@ msgstr ""
 
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 msgid "Click this link"
-msgstr ""
+msgstr "Kliknite na ovaj link"
 
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid "Click or paste this link into your browser and follow the prompts"
@@ -932,7 +932,7 @@ msgstr ""
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Notify Owner?"
-msgstr ""
+msgstr "Obavesti vlasnika?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "PCP Block ID"
@@ -948,7 +948,7 @@ msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Approval Required?"
-msgstr ""
+msgstr "Potrebno odobrenje?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tell a Friend Enabled?"
