po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-19 07:57+0000\n"
+"PO-Revision-Date: 2016-12-23 14:30+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -5184,7 +5184,7 @@ msgstr ""
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid "Birth-Date"
-msgstr ""
+msgstr "Datum rođenja"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid ""
@@ -5208,11 +5208,11 @@ msgstr ""
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid "Geo code 1"
-msgstr ""
+msgstr "Geo kod 1"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid "Geo code 2"
-msgstr ""
+msgstr "Geo kod 2"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid ""
@@ -5256,19 +5256,19 @@ msgstr "minut"
 
 #: CRM/Contact/Import/Parser.php
 msgid "seconds"
-msgstr ""
+msgstr "sekundi"
 
 #: CRM/Contact/Import/Parser.php
 msgid "%1 of %2 records - %3 remaining"
-msgstr ""
+msgstr "%1 od %2 zapisa - preostalo %3"
 
 #: CRM/Contact/Import/Parser.php
 msgid "View Contact URL"
-msgstr ""
+msgstr "Pogledaj URL kontakta"
 
 #: CRM/Contact/Import/Parser.php
 msgid "Contact Edit URL"
-msgstr ""
+msgstr "Uredi URL kontakta"
 
 #: CRM/Contact/Page/AJAX.php
 msgid ""
@@ -5300,11 +5300,11 @@ msgstr ""
 
 #: CRM/Contact/Page/DedupeFind.php
 msgid "%1 pairs of duplicates were merged"
-msgstr ""
+msgstr "%1 duplikata je pripojeno"
 
 #: CRM/Contact/Page/DedupeFind.php
 msgid "%1 pairs of duplicates were skipped due to conflict"
-msgstr ""
+msgstr "%1 duplikata je preskočeno zbog konflikta"
 
 #: CRM/Contact/Page/DedupeFind.php
 msgid " during the batch merge process with safe mode."
@@ -5312,7 +5312,7 @@ msgstr ""
 
 #: CRM/Contact/Page/DedupeFind.php
 msgid "Merge Complete"
-msgstr ""
+msgstr "Pripajanje završeno"
 
 #: CRM/Contact/Page/DedupeFind.php
 msgid "Batch Merge Task in progress"
@@ -5358,15 +5358,15 @@ msgstr ""
 
 #: CRM/Contact/Page/DedupeRules.php
 msgid "Changes Saved"
-msgstr ""
+msgstr "Promene snimljene"
 
 #: CRM/Contact/Page/SavedSearch.php
 msgid "Do you really want to remove this Smart Group?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da uklonite ovu smart grupu?"
 
 #: CRM/Contact/Page/View/CustomData.php CRM/Profile/Page/Dynamic.php
 msgid "View %1 Record"
-msgstr ""
+msgstr "Vidi %1 zapis"
 
 #: CRM/Contact/Page/View/GroupContact.php
 #: CRM/Contact/Page/View/UserDashBoard/GroupContact.php
