po: update po/fr_FR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -46,7 +46,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-21 10:45+0000\n"
+"PO-Revision-Date: 2016-12-25 09:12+0000\n"
 "Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -6316,7 +6316,7 @@ msgstr "Événements à venir"
 
 #: CRM/Core/Block.php
 msgid "CiviCRM Full-text Search"
-msgstr "Recherche plein texte"
+msgstr "Recherche plein texte CiviCRM"
 
 #: CRM/Core/Block.php
 msgid "My Contact Dashboard"
@@ -17583,7 +17583,7 @@ msgstr "Habituellement les 3-4 derniers chiffres au dos de la carte dans la case
 
 #: templates/CRM/Core/BillingBlock.tpl
 msgid "My billing address is the same as above"
-msgstr "Mon adresse de facturation est la même que ci-haut"
+msgstr "Mon adresse de facturation est la même que ci-dessus"
 
 #: templates/CRM/Core/BillingBlock.tpl
 msgid "Billing Name and Address"
@@ -17724,7 +17724,7 @@ msgid ""
 "If you have a PayPal account, you can click the PayPal button to continue. "
 "Otherwise, fill in the credit card and billing information on this form and "
 "click <strong>Continue</strong> at the bottom of the page."
-msgstr "Si vous avez un compte PayPal, vous pouvez cliquer sur le bouton PayPal pour continuer. Sinon, remplissez les informations de facturation et sur la carte de crédit dans ce formulaire et cliquez sur le bouton <strong>Suivant</strong> en bas de la page."
+msgstr "Si vous avez un compte PayPal, vous pouvez cliquer sur le bouton PayPal pour continuer. Sinon, remplissez les informations de facturation et de la carte de crédit dans ce formulaire et cliquez sur le bouton <strong>Suivant</strong> en bas de la page."
 
 #: templates/CRM/Custom/Form/ChangeFieldType.tpl
 msgid ""
@@ -21472,7 +21472,7 @@ msgstr "Autorisé à procéder au paiement"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Household Name and State"
-msgstr "Nom et province/département/canton du foyer"
+msgstr "Nom et province/département du foyer"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Contribution Aggregate"
@@ -26138,7 +26138,7 @@ msgid ""
 "Your database is configured to use the MyISAM database engine. CiviCRM "
 "requires InnoDB. You will need to convert any MyISAM tables in your database"
 " to InnoDB. Using MyISAM tables will result in data integrity issues."
-msgstr ""
+msgstr "Votre base de données est configurée pour utiliser le moteur de base de données MyISAM. CiviCRM nécessite InnoDB. Vous devrez convertir toutes les tables MyISAM de votre base de données en InnoDB. L'utilisation des tables MyISAM entraînera des problèmes d'intégrité des données."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "MyISAM Database Engine"
