--- a/po/fr_FR/drupal-civicrm.po
+++ b/po/fr_FR/drupal-civicrm.po
@@ -5,20 +5,24 @@
 # Translators:
 # Claude Borgogno <claude.borgogno@axoide.com>, 2011
 # F Boot <f2boot@gmail.com>, 2012
-# Mathieu Lutfy <mathieu@bidon.ca>, 2015
+# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
+# Mathieu Lu <mathieu@bidon.ca>, 2015
+# mgregoire <mgregoire@mgregoire.net>, 2016
 # mgregoire <mgregoire@mgregoire.net>, 2016
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
+# tonthon <tonthon21@gmail.com>, 2011
+# Vincent <vincent.primault@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
 # Xynn <xynn.anhnguyen@gmail.com>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-03-07 20:43+0000\n"
-"Last-Translator: Xynn <xynn.anhnguyen@gmail.com>\n"
+"PO-Revision-Date: 2016-12-25 08:31+0000\n"
+"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -954,11 +958,11 @@ msgstr "Email principal du contact?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is Billing Email"
-msgstr "email de facturation"
+msgstr "Est l'adresse de facturation"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is this address the contact's billing email?"
-msgstr "email de facturation du contact ?"
+msgstr "Est-ce l'adresse de facturation du contact ?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Email Address"
