--- a/po/fr_FR/pcp.po
+++ b/po/fr_FR/pcp.po
@@ -8,6 +8,7 @@
 # Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
+# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
 # Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # ShevAbam, 2016
@@ -17,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-15 14:13+0000\n"
+"PO-Revision-Date: 2016-12-25 10:05+0000\n"
 "Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -60,7 +61,7 @@ msgstr "Validation requise"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Owner Email Notification"
-msgstr ""
+msgstr "Notification par courriel"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -82,13 +83,13 @@ msgstr "Texte du lien « Créer une page de campagne personnelle »"
 msgid ""
 "This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr ""
+msgstr "Cette inscription est faite grâce à <strong>%1</strong> qui soutient notre campagne. "
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
 "This contribution is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr ""
+msgstr "Cette contribution a été reçu grâce aux efforts de <strong>%1</stong> qui soutient notre campagne."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
@@ -168,7 +169,7 @@ msgstr "Le profil de supporter n'est pas mis pour cette page de campagne personn
 msgid ""
 "Owner Notification is not set for this Personal Campaign Page. Please "
 "contact the site administrator if you need assistance."
-msgstr ""
+msgstr "Le profil de sympathisant n'est pas indiqué pour cette page personnelle de campagne. Veuillez contacter l'administrateur du site pour obtenir de l'aide."
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
@@ -205,7 +206,7 @@ msgstr "Type d'entité cible"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Owner Notification"
-msgstr ""
+msgstr "Notification d'envoi"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
@@ -380,7 +381,7 @@ msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
 "caused by using your browser's Back button or by using an incomplete or "
 "invalid link."
-msgstr ""
+msgstr "Nous ne pouvons charger la page demandée à cause d'un lien incomplet. Cela peut être dû à l'utilisation du bouton « Précédent » de votre navigateur ou à cause d'un lien invalide ou incomplet."
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid "Could not find source page id."
@@ -494,7 +495,7 @@ msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
 "names (or nicknames) of the people who supported you. (Donors will have the "
 "option to remain anonymous. Their names will NOT be listed.)"
-msgstr ""
+msgstr "Si cette option est cochée, une \"liste de remerciements\" sera affichée avec les noms (ou pseudos) des personnes qui ont soutenu votre campagne (les personnes auront la possibilité de rester anonymes, leurs noms ne seront alors PAS inclus dans la liste)."
 
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
@@ -525,7 +526,7 @@ msgid ""
 "other fields in the profile. If you don't yet have an appropriate Profile "
 "configured, you will need to <a href='%1'>create one first</a>, and then "
 "return to this form to select it."
-msgstr ""
+msgstr "Le profil de sympathisant est utilisé pour collecter ou mettre à jour les informations de base (par exemple, le nom et l'adresse électronique) des utilisateurs pendant qu'ils créent une page de campagne personnelle. Le profil que vous sélectionnez doit être configuré avec \"Création de compte requise\" (Section Paramètres avancés du profil). Vous devez inclure un champ Adresse e-mail et  ajouter n'importe quel nombre d'autres champs dans le profil. Si vous n'avez pas encore configuré un profil approprié, vous devez <a href='%1'> en créer un </a>, puis revenir à ce formulaire pour le sélectionner."
 
 #: templates/CRM/PCP/Form/Contribute.tpl templates/CRM/PCP/Form/Event.tpl
 msgid ""
@@ -569,7 +570,7 @@ msgid ""
 "This link will appear on the Event registration Thank-you page as well as on"
 " each Personal Campaign Page. Leave blank if you do not want constituents to"
 " be prompted to create their own Personal Campaign Pages."
-msgstr ""
+msgstr "Texte du lien invitant les participants à créer une page de campagne personnelle. Ce lien apparaît sur la page de remerciement de l'événement ainsi que sur chaque page de campagne personnelle. Laissez ce champ vide si vous ne voulez pas que les contacts soient invités à créer leurs pages de campagnes personnelles."
 
 #: templates/CRM/PCP/Form/Event.hlp
 msgid ""
@@ -596,7 +597,7 @@ msgstr "Permettre aux contacts de créer leurs propres pages de campagne en rela
 msgid ""
 "You can also place additional links (or menu items) allowing constituents to"
 " create their own fundraising pages using the following URL:"
-msgstr ""
+msgstr "Pour permettre à vos contacts de créer leur propre page de collecte de dons vous pouvez ajouter un lien (ou une rubrique dans un menu) en utilisant l'URL :"
 
 #: templates/CRM/PCP/Form/PCP.tpl templates/CRM/PCP/Page/PCP.hlp
 msgid ""
@@ -760,22 +761,22 @@ msgstr "Votre total a été mis à jour."
 msgid ""
 "The donor's information is listed below.  You can choose to contact them and"
 " convey your thanks if you wish."
-msgstr ""
+msgstr "Les informations du donateur sont énumérées ci-dessous. Vous pouvez choisir de les contacter et leur transmettre vos remerciements si vous le souhaitez."
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid ""
 "The donor's name has been added to your honor roll unless they asked not to "
 "be included."
-msgstr ""
+msgstr "Le nom du donateur a été ajouté à votre liste d'honneur, à moins d'avoir demandé à ne pas y être inclus."
 
 #: xml/templates/message_templates/pcp_owner_notify_subject.tpl
 msgid "Someone has just donated to your personal campaign page"
-msgstr ""
+msgstr "Quelqu'un vient de faire un don à votre page de campagne personnelle."
 
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "Personal Campaign Page Owner Notification"
-msgstr ""
+msgstr "Notification de page de campagne personnelle"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -811,7 +812,7 @@ msgstr "Aller sur votre page"
 msgid ""
 "When you view your campaign page WHILE LOGGED IN, the page includes links to"
 " edit your page, tell friends, and update your contact info."
-msgstr ""
+msgstr "Lorsque vous affichez votre page de votre campagne EN LIGNE, la page contient des liens permettant d'éditer votre page, d'informer vos amis et de mettre à jour vos coordonnées."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -832,7 +833,7 @@ msgid ""
 "Your personal campaign page has been reviewed. There were some issues with "
 "the content which prevented us from approving the page. We are sorry for any"
 " inconvenience."
-msgstr ""
+msgstr "Votre page de campagne personnelle a été révisée. Il y a des problèmes dans son contenu qui nous empêchent de la valider. Nous sommes désolés pour la gêne occasionnée."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -929,7 +930,7 @@ msgstr "Cliquer ou copier ce lien dans votre navigateur"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "PCP Block"
-msgstr ""
+msgstr "Bloc PCP"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Use Thermometer?"
@@ -941,11 +942,11 @@ msgstr "Afficher la liste des donateurs ?"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Notify Owner?"
-msgstr ""
+msgstr "Avis au propriétaire?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "PCP Block ID"
-msgstr ""
+msgstr "ID du bloc PCP"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Target Entity"
@@ -961,8 +962,8 @@ msgstr "Validation requise ?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tell a Friend Enabled?"
-msgstr ""
+msgstr "« Recommander à un ami »  activé ?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tell A Friend Limit"
-msgstr ""
+msgstr "Limite Recommander à un ami"
