--- a/po/fr_FR/contribute.po
+++ b/po/fr_FR/contribute.po
@@ -8,6 +8,7 @@
 # elma dontovska <elmadont@gmail.com>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
+# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Moyg <moygwp+transifex@gmail.com>, 2014
 # Moyg <moygwp+transifex@gmail.com>, 2014
@@ -30,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-14 23:51+0000\n"
-"Last-Translator: Vincent Tercelin <vincent.tercelin@gmail.com>\n"
+"PO-Revision-Date: 2016-12-25 08:49+0000\n"
+"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3041,7 +3042,7 @@ msgid ""
 "Check this box if you want to give users the option to make recurring "
 "contributions. This feature requires that you use a payment processor which "
 "supports recurring billing / subscriptions functionality."
-msgstr "Cochez cette case si vous voulez permettre à vos utilisateurs de faire des contributions périodiques. Cette fonction nécessite une passerelle de paiement qui le permette."
+msgstr "Cochez cette case si vous voulez permettre à vos utilisateurs de faire des contributions périodiques. Cette fonction nécessite une passerelle de paiement le permettant."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid "Select recurring units supported for recurring payments."
@@ -3187,7 +3188,7 @@ msgstr "Vous pouvez collecter des informations sur les contributeurs autres que 
 msgid ""
 "Profile to be included above the billing information (but after the "
 "introductory message, amounts, and honoree section)."
-msgstr ""
+msgstr "Profil à inclure au-dessus des informations de facturation (mais après le message d'introduction, les montants et la section d'honneur)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.tpl
 msgid "Profile to be included at the bottom of the page."
@@ -4153,7 +4154,7 @@ msgstr "Nombre de contributions sélectionnées : %1"
 msgid ""
 "Use this form to update the credit card and billing name and address used "
 "for this recurring contribution."
-msgstr "Ce formulaire est utilisé pour modifier la carte de crédit, les nom et adresse de facturation utilisés pour cette contribution périodique."
+msgstr "Ce formulaire est utilisé pour modifier la carte de crédit, le nom et adresse de facturation utilisés pour cette contribution périodique."
 
 #: templates/CRM/Contribute/Form/UpdateSubscription.tpl
 msgid ""
@@ -4819,7 +4820,7 @@ msgstr "Cette contribution est périodique. Vous pouvez supprimer les contributi
 msgid ""
 "You can update billing details for this recurring contribution by <a "
 "href=\"%1\">visiting this web page</a>."
-msgstr "Vous pouvez modifier les données de facturation de cette contribution périodique en visitant <a href=\"%1\">cette page</a>."
+msgstr "Vous pouvez modifier les données de facturation de cette contribution périodique <a href=\"%1\"> en visitant cette page</a>."
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
