--- a/po/pt_PT/admin.po
+++ b/po/pt_PT/admin.po
@@ -11,12 +11,13 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Ricardo <ricardo75@gmail.com>, 2011
 # Stelmo Barbosa <stelmo@sapo.pt>, 2016
+# Tiago Monteiro <tiagofmmonteiro@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-26 23:03+0000\n"
+"Last-Translator: Tiago Monteiro <tiagofmmonteiro@gmail.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,11 +33,11 @@ msgstr "Tipo de Contacto Básico"
 msgid ""
 "This contact type name already exists in database. Contact type names must "
 "be unique."
-msgstr "Este nome de Tipo de Contato já existe na base de dados. Os nomes de tipos de contato devem ser únicos."
+msgstr "Este Tipo de Contato já existe na base de dados. Os nomes de tipos de contato devem ser únicos."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Contact type names should not use reserved keywords."
-msgstr "Os nome de Tipo de Contato não deveriam ser palavras reservadas."
+msgstr "Os Tipos de Contato não devem ser palavras reservadas."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Selected contact type has been deleted."
@@ -74,7 +75,7 @@ msgstr "Transferir e Instalar"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "Transferir e instalar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Uninstall"
@@ -82,15 +83,15 @@ msgstr "Desinstalar"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Desinstalar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Ativar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Desativar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
@@ -100,7 +101,7 @@ msgstr "Extensão Desativada"
 msgid ""
 "Cannot uninstall this extension - there is at least one payment processor "
 "using the payment processor type provided by it."
-msgstr ""
+msgstr "Não é possível instalar esta extensão - existe pelo menos um pagamento a usar o tipo de pagamento disponibilizado por ele."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall Error"
@@ -222,7 +223,7 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
-msgstr ""
+msgstr "Cópia %1 de %2"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your new Label Format titled <strong>%1</strong> has been saved."
