po: update po/fi_FI/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fi_FI/common-components.po
+++ b/po/fi_FI/common-components.po
@@ -4,8 +4,10 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Antti Kuosmanen <antti@seravo.fi>, 2014
+# Lasse Miettinen, 2016
 # Pinja-Liina Jalkanen <pinjaliina@iki.fi>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Tero Kankaanperä <tero@terokankaanpera.fi>, 2016
 # Tomi Toivio <tomi@sange.fi>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
@@ -13,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-07 15:11+0000\n"
-"Last-Translator: Pinja-Liina Jalkanen <pinjaliina@iki.fi>\n"
+"PO-Revision-Date: 2016-12-27 16:11+0000\n"
+"Last-Translator: Tero Kankaanperä <tero@terokankaanpera.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +27,7 @@ msgstr ""
 #: CRM/Admin/Form/CMSUser.php templates/CRM/Financial/Form/Search.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: CRM/Admin/Form/ContactType.php templates/CRM/Admin/Form/Setting/Url.hlp
 #: CRM/Contribute/Form/ManagePremiums.php
@@ -34,15 +36,15 @@ msgstr "Kuvan URL-osoite"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Name"
-msgstr ""
+msgstr "Fontin nimi"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Size"
-msgstr ""
+msgstr "Fontin koko"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Style"
-msgstr ""
+msgstr "Fontin tyyli"
 
 #: CRM/Admin/Form/LocationType.php templates/CRM/Admin/Page/LabelFormats.tpl
 #: templates/CRM/Admin/Page/LocationType.tpl
@@ -61,11 +63,11 @@ msgstr ""
 #: CRM/Mailing/Form/Component.php templates/CRM/Mailing/Page/Component.tpl
 #: CRM/Member/Form/MembershipStatus.php
 msgid "Default?"
-msgstr ""
+msgstr "Oletusarvo?"
 
 #: CRM/Admin/Form/Navigation.php templates/CRM/Event/Page/DashBoard.tpl
 msgid "Parent"
-msgstr ""
+msgstr "Vanhempi"
 
 #: CRM/Admin/Form/Options.php CRM/Financial/Form/BatchTransaction.php
 #: CRM/Report/Form/Mailing/Opened.php CRM/Report/Form/Mailing/Summary.php
@@ -94,7 +96,7 @@ msgstr ""
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Site URL"
-msgstr ""
+msgstr "Sivuston URL"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Recurring Payments URL"
@@ -117,7 +119,7 @@ msgstr ""
 #: templates/CRM/Pledge/Page/Payment.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Due Date"
-msgstr ""
+msgstr "Eräpäivä"
 
 #: CRM/Admin/Form/RelationshipType.php
 #: templates/CRM/Admin/Page/RelationshipType.tpl
@@ -165,12 +167,12 @@ msgstr "kunnes"
 #: ang/crmMailingAB/EditCtrl/report.html templates/CRM/Mailing/Page/Report.tpl
 #: templates/CRM/Mailing/Page/Tab.tpl
 msgid "Recipients"
-msgstr ""
+msgstr "Vastaanottajat"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 #: CRM/Event/Form/ManageEvent/ScheduleReminders.php
 msgid "Scheduled Reminder"
-msgstr ""
+msgstr "Ajastettu muistutus"
 
 #: CRM/Admin/Page/Admin.php templates/CRM/Admin/Page/ConfigTaskList.tpl
 #: CRM/Contribute/Info.php CRM/Contribute/Page/DashBoard.php
@@ -211,12 +213,12 @@ msgstr "Poista tapahtuman mallipohja"
 
 #: CRM/Admin/Page/Extensions.php CRM/Batch/BAO/Batch.php
 msgid "Download"
-msgstr ""
+msgstr "Lataa"
 
 #: CRM/Admin/Page/MessageTemplates.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Message Template"
-msgstr ""
+msgstr "Viestimalli"
 
 #: CRM/Admin/Page/Options.php templates/CRM/Admin/Page/APIExplorer.tpl
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -251,7 +253,7 @@ msgstr ""
 #: templates/CRM/Event/Page/DashBoard.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl CRM/PCP/BAO/PCP.php
 msgid "Configure"
-msgstr "Anna asetukset"
+msgstr "Asetukset"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: CRM/Contribute/DAO/Widget.php
@@ -360,7 +362,7 @@ msgstr ""
 
 #: CRM/Badge/Form/Layout.php CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Save and Preview"
-msgstr ""
+msgstr "Tallenna ja esikatsele"
 
 #: CRM/Batch/BAO/Batch.php CRM/Financial/Form/BatchTransaction.php
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
@@ -414,12 +416,12 @@ msgstr ""
 #: CRM/Batch/Form/Entry.php CRM/Contribute/Form/Contribution.php
 #: CRM/Pledge/Form/Payment.php
 msgid "Adjust Pledge Payment Schedule?"
-msgstr "Vaihda lahjoitusten maksuaikataulua?"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php CRM/Contribute/Form/Contribution.php
 #: CRM/Pledge/Form/Payment.php
 msgid "Adjust Total Pledge Amount?"
-msgstr "Vaihda lahjoituksen kokonaissumaa?"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php CRM/Contribute/Form/SoftCredit.php
 msgid "Please enter the soft credit amount."
@@ -441,7 +443,7 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php CRM/Contribute/DAO/ContributionPage.php
 msgid "Thank-you Text"
-msgstr ""
+msgstr "Kiitossivun teksti"
 
 #: CRM/Campaign/DAO/Survey.php CRM/Event/DAO/Event.php
 msgid "Is shared through social media"
@@ -463,13 +465,13 @@ msgstr "Syötä kelvollinen arvo rahalle (kuten %1)."
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Thank-you Page Title"
-msgstr ""
+msgstr "Kiitossivun otsikko"
 
 #: CRM/Campaign/Form/Petition.php
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "Allow sharing through social media?"
-msgstr ""
+msgstr "Jakaminen sosiaalisessa mediassa sallittu?"
 
 #: CRM/Campaign/Form/Survey/Results.php
 #: CRM/Report/Form/Campaign/SurveyDetails.php
@@ -614,7 +616,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type ID"
-msgstr ""
+msgstr "Maksutyypin ID"
 
 #: CRM/Contribute/DAO/Contribution.php
 #: templates/CRM/Contribute/Form/Search/ContributionRecur.tpl
@@ -670,7 +672,7 @@ msgstr "Maksimisumma"
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 #: CRM/PCP/DAO/PCP.php CRM/Report/Form/Contribute/PCP.php
 msgid "Goal Amount"
-msgstr ""
+msgstr "Tavoitesumma"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 #: CRM/Contribute/Form/AdditionalPayment.php
@@ -748,7 +750,7 @@ msgstr ""
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl CRM/PCP/Form/Event.php
 msgid "Online Contribution Page"
-msgstr ""
+msgstr "Verkkolahjoitussivu"
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: CRM/Contribute/Form/ContributionPage/Amount.php
@@ -959,11 +961,11 @@ msgstr ""
 
 #: CRM/Contribute/Form/Search.php CRM/Financial/Form/BatchTransaction.php
 msgid "Contributor Name or Email"
-msgstr "Avustajan nimi tai sähköpostiosoite"
+msgstr "Maksajan nimi tai sähköpostiosoite"
 
 #: CRM/Contribute/Form/Search.php CRM/Report/Form/Contribute/SoftCredit.php
 msgid "Contributor Name"
-msgstr ""
+msgstr "Maksajan nimi"
 
 #: CRM/Contribute/Form/Task/Batch.php CRM/Event/Form/Task/Batch.php
 #: CRM/Member/Form/Task/Batch.php
@@ -1011,7 +1013,7 @@ msgstr "Tuontikäytäntö"
 
 #: CRM/Contribute/Import/Parser/Contribution.php CRM/Pledge/DAO/Pledge.php
 msgid "Pledge ID"
-msgstr "Lahjoituksen ID"
+msgstr ""
 
 #: CRM/Contribute/Info.php CRM/Event/Info.php CRM/Member/Info.php
 msgid "credit card"
@@ -1233,7 +1235,7 @@ msgstr ""
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 #: templates/CRM/Member/Page/Tab.hlp
 msgid "Contributor"
-msgstr ""
+msgstr "Maksaja"
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -1461,12 +1463,12 @@ msgstr "Profiilille ei ole asetettu sähköpostiosoitetta"
 #: templates/CRM/Contribute/Form/Search.tpl
 #: templates/CRM/Financial/Form/BatchTransaction.tpl
 msgid "Contributor Tag(s)"
-msgstr ""
+msgstr "Maksajaa kuvaavat avainsanat"
 
 #: templates/CRM/Contribute/Form/Search.tpl
 #: templates/CRM/Financial/Form/BatchTransaction.tpl
 msgid "Contributor Group(s)"
-msgstr ""
+msgstr "Ryhmät joihin maksaja kuuluu"
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp templates/CRM/Mailing/MailingUI.hlp
@@ -1685,7 +1687,7 @@ msgstr ""
 #: templates/CRM/Contribute/Page/ContributionType.tpl
 #: templates/CRM/Financial/Page/FinancialType.tpl
 msgid "Add Financial Type"
-msgstr ""
+msgstr "Lisää maksutyyppi"
 
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 #: templates/CRM/Member/Page/MembershipType.tpl
@@ -1868,7 +1870,7 @@ msgstr ""
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Dear %1"
-msgstr ""
+msgstr "Hyvä %1"
 
 #: xml/templates/message_templates/contribution_recurring_billing_html.tpl
 #: xml/templates/message_templates/contribution_recurring_billing_text.tpl
