--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-09 14:21+0000\n"
+"PO-Revision-Date: 2016-12-28 15:38+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1842,7 +1842,7 @@ msgstr ""
 #: xml/templates/message_templates/contribution_online_receipt_text.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "On Behalf Of"
-msgstr ""
+msgstr "U ime"
 
 #: xml/templates/message_templates/contribution_recurring_billing_html.tpl
 #: xml/templates/message_templates/contribution_recurring_billing_text.tpl
@@ -1864,7 +1864,7 @@ msgstr ""
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Dear %1"
-msgstr ""
+msgstr "Dragi/a %1"
 
 #: xml/templates/message_templates/contribution_recurring_billing_html.tpl
 #: xml/templates/message_templates/contribution_recurring_billing_text.tpl
@@ -1879,7 +1879,7 @@ msgstr "Ukoliko imate pitanja kontaktirajte nas na %1"
 msgid ""
 "This membership will be renewed automatically. You can cancel the auto-"
 "renewal option by <a href=\"%1\">visiting this web page</a>."
-msgstr ""
+msgstr "Ovo članstvo će biti automatski obnovlljeno. Automatsko obnavljanje možete otkazati odlaskom na <a href=\"%1\">ovu veb stranu</a>."
 
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
